feat: edit and view venueoperator profile
