# src/modules/venue/venue.controller.ts
@@ -1,7 +1,12 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete } from '@nestjs/common';
+import { Controller, Get, Post, Body, Patch, Param, Delete, HttpStatus, Put, HttpCode } from '@nestjs/common';
 import { VenueService } from './venue.service';
-import { CreateVenueDto } from './dto/request-venue.dto';
+import { CreateVenueDto, UpdateVenueProfileDto } from './dto/request-venue.dto';
 import { UpdateVenueDto } from './dto/response-venue.dto';
+import { apiResponse } from '../../utils/response-helper';
+import { ApiResponse } from '../../utils/types/response.type';
+import { VenueEntity } from './entities/venue.entity';
+import { VenueMessages } from './constants/venue.messages';
+import { VenueRoutes } from './constants/venue.routes';
 
 @Controller('venue')
 export class VenueController {
@@ -12,6 +17,42 @@ export class VenueController {
     return this.venueService.create(createVenueDto);
   }
 
+  // @Post()
+  // async venueOperatorProfile(@Body() createUserDto: CreateVenueDto): Promise<ApiResponse<VenueEntity>> {
+  //   try {
+  //     const user = await this.venueService.create(createUserDto);
+  //     return apiResponse(HttpStatus.CREATED, VenueMessages.EMAIL, user);
+  //   } catch (error) {
+  //     throw error;
+  //   }
+  // }
+
+  @Put(VenueRoutes.ID)
+  @HttpCode(HttpStatus.OK)
+  async updateVenueProfile(
+    @Param('id') venueOperatorId: string,
+    @Body() updateVenueProfileDto: UpdateVenueProfileDto,
+  ): Promise<ApiResponse<VenueEntity>> {
+    try {
+      await this.venueService.updateProfile(venueOperatorId, updateVenueProfileDto);
+      return apiResponse(HttpStatus.OK, VenueMessages.UPDATE);
+    } catch (error) {
+      throw error;
+    }
+  }
+
+  @Get(VenueRoutes.PROFILE)
+  @HttpCode(HttpStatus.OK)
+  async get(@Param('id') venueOperatorId: string): Promise<ApiResponse<VenueEntity>> {
+    try {
+      const venueOperator = await this.venueService.getVenueProfile(venueOperatorId);
+      console.log('🚀 ~ VenueController ~ get ~ venueOperator:', venueOperator);
+      return apiResponse(HttpStatus.OK, VenueMessages.GET, venueOperator);
+    } catch (error) {
+      throw error;
+    }
+  }
+
   @Get()
   findAll() {
     return this.venueService.findAll();
@@ -20,11 +61,6 @@ export class VenueController {
   @Get(':id')
   findOne(@Param('id') id: string) {
     return this.venueService.findOne(+id);
-  }
-
-  @Patch(':id')
-  update(@Param('id') id: string, @Body() updateVenueDto: UpdateVenueDto) {
-    return this.venueService.update(+id, updateVenueDto);
   }
 
   @Delete(':id')
